--- a/hahu/www/index.html
+++ b/hahu/www/index.html
@@ -7,8 +7,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.b5931cee0a2209849bf2.css"></head>
+<link rel="stylesheet" href="styles.248c019b65ee2d9ade43.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.f8b2656fa9a19481f5fa.js"></script><script type="text/javascript" src="polyfills.8fb530c365936ec11961.js"></script><script type="text/javascript" src="scripts.cabfdb7f025747fe82a5.js"></script><script type="text/javascript" src="main.73ac6d141bab842e8d56.js"></script></body>
+<script src="runtime-es2015.6db05476d3fa09aab9c8.js" type="module"></script><script src="runtime-es5.6db05476d3fa09aab9c8.js" nomodule defer></script><script src="polyfills-es5.bebec1282d79c0f0abb8.js" nomodule defer></script><script src="polyfills-es2015.013c3f5f700342a8a19a.js" type="module"></script><script src="scripts.cabfdb7f025747fe82a5.js" defer></script><script src="main-es2015.6f769aebafe722b14326.js" type="module"></script><script src="main-es5.6f769aebafe722b14326.js" nomodule defer></script></body>
 </html>
