**Modified search functionality

--- a/hahu/platforms/android/app/src/main/assets/www/index.html
+++ b/hahu/platforms/android/app/src/main/assets/www/index.html
@@ -7,16 +7,16 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="styles.bc348db9fb7790c4fa7b.css">
+  <link rel="stylesheet" href="styles.9e8e35a9e4d8f9828982.css">
 </head>
 <body>
 <app-root></app-root>
-<!--<script src="runtime-es2015.99637b641cf432ec5798.js" type="module"></script>-->
-<script type="text/javascript" src="runtime-es5.99637b641cf432ec5798.js"></script>
-<script type="text/javascript" src="polyfills-es5.ba6137dece71925b2668.js"></script>
-<!--<script src="polyfills-es2015.820b6569a1b8337cf6df.js" type="module"></script>-->
-<script type="text/javascript" src="scripts.2527ac70b2716448461f.js"></script>
-<!--<script src="main-es2015.9ebb82f70e62c7c4c91f.js" type="module"></script>-->
-<script type="text/javascript" src="main-es5.9ebb82f70e62c7c4c91f.js"></script>
+    <!--<script src="runtime-es2015.15cf8455f9d4e2222821.js" type="module"></script>-->
+    <script src="runtime-es5.15cf8455f9d4e2222821.js"></script>
+    <script src="polyfills-es5.05fd61b7df881d39be0e.js"></script>
+    <!--<script src="polyfills-es2015.651bdca66be7de9963d2.js" type="module"></script>-->
+    <script src="scripts.2527ac70b2716448461f.js"></script>
+    <!--<script src="main-es2015.d0f4b3bcf8356b7a8e49.js" type="module"></script>-->
+    <script src="main-es5.d0f4b3bcf8356b7a8e49.js"></script>
 </body>
 </html>
