**Modified scrolling problem after adding swipe functionality

--- a/hahu/platforms/android/app/src/main/assets/www/index.html
+++ b/hahu/platforms/android/app/src/main/assets/www/index.html
@@ -4,16 +4,20 @@
   <meta charset="utf-8">
   <title>HahuApp</title>
   <base href="">
-
+  <script>
+    if (global === undefined) {
+      var global = window;
+    }
+  </script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="styles.3e6a274e6fad382d2198.css">
+  <link rel="stylesheet" href="styles.b5271b4f97bec075af17.css">
 </head>
 <body>
 <app-root></app-root>
-<script src="runtime-es5.436a65ea58bb813407e0.js"></script>
-<script src="polyfills-es5.05fd61b7df881d39be0e.js"></script>
-<script src="scripts.2527ac70b2716448461f.js"></script>
-<script src="main-es5.d0f4b3bcf8356b7a8e49.js"></script>
+  <script src="runtime-es5.9762a1311a042813ea39.js" type="text/javascript"></script>
+  <script src="polyfills-es5.05fd61b7df881d39be0e.js" type="text/javascript"></script>
+  <script src="scripts.2527ac70b2716448461f.js" type="text/javascript"></script>
+  <script src="main-es5.30190d52588a63bca46e.js" type="text/javascript"></script>
 </body>
 </html>
